Fortify changes